feature/devfinder-7 - theme and improvements pt1

--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "github-user-search",
+  "name": "devfinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,9 +37,14 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.30.1",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "sass": "^1.54.7",
+    "typescript": "^4.8.2"
   },
   "main": "index.js",
   "repository": "https://github.com/gzhel/github-user-search.git",
