--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
         "es2021": true
     },
     "extends": "plugin:react/recommended",
-    "overrides": [
-    ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
